<resources>
    <string name="app_name">EdalellDeliviry</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="todo">TODO</string>
    <string name="phone_number_or_email">Phone number or Email</string>
    <string name="forget_password"><u>Forget Password ?</u> </string>
    <string name="countrybold">country:</string>
    <string name="goverment">Goverment:</string>
    <string name="district">District:</string>
    <string name="building">Building :</string>
    <string name="apartment_no">Apartment No.:</string>
    <string name="login">Login</string>
    <string name="order">Order</string>
    <string name="ordercode">OrderCode</string>
    <string name="subtotal">Subtotal</string>
    <string name="deliverycost">DeliveryCost</string>
    <string name="total">Total</string>
    <string name="space">&#x20;&#x2009;&#x200A;</string>
    <string name="twospace">&#x20;&#x2009;&#x200A;&#x20;&#x2009;&#x200A;&#x20;&#x2009;&#x200A;&#x20;&#x2009;&#x200A;</string>
    <string name="orderstatue">OrderStatus</string>
    <string name="password">Password</string>
    <string name="phonenumber">Phone Number orEmail</string>
    <string name="take_order">Take Order</string>
    <string name="address_details">Address Details</string>
    <string name="country">Country</string>
    <string name="government">City :</string>
    <string name="open_add_inMap">Open Address In Map</string>
    <string name="floor">Floor</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="street">Street</string>
    <string name="building_number">Building Number</string>
    <string name="node">Node</string>
    <string name="orderdeliverd">Order Deliverd</string>
    <string name="home">Home</string>
    <string name="title_activity_home_fragment">HomeFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phone">Phone</string>
</resources>
