<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:src="@drawable/ic_logo"
            tools:ignore="ContentDescription" />

        <EditText
            android:background="@drawable/rectangle_shape"
            android:layout_gravity="center"
            android:textColorHint="@color/colorHint"
            android:id="@+id/etPhoneLogin"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:hint="@string/phone"
            android:layout_marginBottom="5dp" />

        <EditText
            android:inputType="textPassword"
            android:background="@drawable/rectangle_shape"
            android:layout_gravity="center"
            android:textColorHint="@color/colorHint"
            android:id="@+id/etPasswordLogin"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="50dp"
            android:textSize="16sp"
            android:hint="@string/password"
            android:layout_marginBottom="5dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="170dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="9dp"
            android:background="@color/colorButton"
            android:textSize="16sp"
            android:textAllCaps="false"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:layout_marginBottom="15dp" />
    </LinearLayout>
</LinearLayout>