<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:divider="@android:color/transparent"
        android:dividerHeight="0.0px"
        android:elevation="120dp"
        android:shadowColor="#000"
        android:shadowDx="0"
        android:shadowDy="30"
        android:shadowRadius="50"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        card_view:cardPreventCornerOverlap="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/order"

                    android:textColor="@color/colorButton"
                    android:textSize="20sp" />


                <TextView

                    android:id="@+id/OrderNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:text="@string/ordercode"
                    android:textColor="@color/colorButton"
                    android:textSize="20sp"
                    android:paddingLeft="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Subtotal"
                        android:textColor="#574D4D"
                        android:textSize="15sp"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Delivery Cost"
                        android:textColor="#574D4D"
                        android:textSize="15sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Total"
                        android:textColor="#574D4D"
                        android:textSize="17sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Subtotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:paddingLeft="10dp"
                        android:text="13.95 EGP"
                        android:textColor="#610909"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/DeliveryCost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="10.00 EGP"
                        android:textColor="#610909"
                        android:textSize="15sp"
                        android:paddingLeft="10dp" />

                    <TextView
                        android:id="@+id/Total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="10dp"
                        android:text="23.95 EGP"
                        android:textColor="#610909"
                        android:textSize="17sp"
                        android:textStyle="bold"

                        android:paddingLeft="10dp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/btnTakeOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/buttonfororder"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/take_order"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>

